Changes for 1.7
* Created new territory effect attachment option, "unitsNotAllowed", which is a list of units that will be prevented from moving into any territories with this effect. (crystalct) 

* Adding ability to specify which round the game starts on, through a round offset in gameplay section of xml. (veqryn)

* Added ability to Right Click on any node in the History panel, and save a game at that point in history [could still be buggy, do not use for tournament games]. (veqryn)

* Abstracted delegates so that the server can now determine if it needs to wait on the user for input for a delegate or not. (veqryn)

* Fixed bug where having a tech token but not having enough money to buy a new one, would cause you to skip rolling for the existing token. (veqryn)


Changes for 1.6.1.4
* Adding dotted lines to the LOTR Middle Earth map, to show connections over rivers. (veqryn)

* Not showing tech in stats panel if game xml does not have any technologies. (veqryn)

* Created new stepProperty, "turnSummaryPlayers", which holds a list of players for whom we will include their turn summary information in the forum/email post. (veqryn)

* Created new stepProperty, "skipPosting", which when true will skip the forum posting for that EndTurn type step. (veqryn)

* Created new xml option type "stepProperty" for a step (gamePlay - sequence), which can hold small options for modifying a delegate step. (veqryn)

* Adding some more sounds for ancient/classical era. (veqryn)

* Adding some more ww2 sounds and national anthems for main players. (hepster)

* Allowing air movement over neutrals and enemy territories so long as movement over neutrals is allowed, and no nonparatrooping units are present. (veqryn)
